--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
   display: flex;
   flex-direction: column;
   gap: 5rem;
-  padding: 5rem;
+  padding: 0 10% 5rem 10%;
 }
 .title-img{
  width: 50%;
  margin: auto;
+ z-index: 2;
 }
