--- a/src/components/Character.css
+++ b/src/components/Character.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 20rem;
 }
 .blue-bg{
     background-color: rgba(60, 180, 202, .56);
