--- a/src/components/CharacterList.css
+++ b/src/components/CharacterList.css
@@ -2,6 +2,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 5rem;
+    justify-content: space-between;
+    gap: 5rem 3rem;
 }
