--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,12 @@
  width: 50%;
  margin: auto;
  z-index: 2;
+ transition: transform .4s ease-in-out;
+}
+.title-img-animation{
+  cursor: pointer;
+}
+.title-img-animation:hover{
+  transform: scale(1.1);
+  transition: transform .4s ease-in-out;
 }
