--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .page-container {
   min-height: 100vh;
   width: 100%;
-  background: url("./assets/img/web-bg.jpg");
+  background: black;
   background-size: contain;
   background-position: center;
   display: flex;
   flex-direction: column;
   gap: 5rem;
-  padding: 0 10% 5rem 10%;
+  padding: 0 10rem 5rem 10rem;
 }
 .title-img{
  width: 50%;
