--- a/src/components/PageBtnDisplay.css
+++ b/src/components/PageBtnDisplay.css
@@ -8,4 +8,9 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    z-index: 3;
+    cursor: pointer;
+}
+.actual-page{
+    font-size: 1.4rem;
 }
