--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,13 @@
   transform: scale(1.1);
   transition: transform .4s ease-in-out;
 }
+.animation-container{
+  display: block;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: red;
+}
