--- a/src/components/CanvasAnimation.css
+++ b/src/components/CanvasAnimation.css
@@ -15,14 +15,14 @@
   display: none;
 }
 /* PORTAL GUN ANIMATION */
-.portalGunAnimation {
+.portalGunAnimation,.meeseeksAnimation{
   position: absolute;
   min-height: 150vh;
   width: 100%;
   top: 0;
   left: 0;
   opacity: 1;
-  animation: startAnimation .3s linear;
+  animation: startAnimation 0.3s linear;
 }
 #portalGunCanvas{
   z-index: 1;
@@ -35,6 +35,7 @@
   width: 100%;
   filter: blur(20px) contrast(40);
 }
+
 .portal {
   z-index: 4;
   position: absolute;
@@ -45,6 +46,52 @@
   height: 40rem;
   animation: portalMovement 6s linear infinite;
 }
+
+#meeseeksCanvas{
+  display: block;
+  position: absolute;
+  z-index: 5;
+  background-color: transparent;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(1);
+}
+
+.meeseeks {
+  z-index: 4;
+  position: absolute;
+  opacity: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  animation: meeseeksMovement 2s linear infinite, scaleAnimation .6s linear;
+}
+#meeseeksSprite{
+  display: none;
+}
+
+@keyframes meeseeksMovement {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  25% {
+    transform: translate(-50%, -50%) rotate(-5deg);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  75% {
+    opacity: 1;
+
+    transform: translate(-50%, -50%) rotate(5deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+}
+
 
 @keyframes portalMovement {
   0% {
@@ -64,11 +111,20 @@
   }
 }
 
-@keyframes startAnimation{
-  0%{
+@keyframes scaleAnimation {
+  0% {
+    transform: translate(-50%, -50%) rotate(0) scale(0)
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(0) scale(1);
+  }
+}
+
+@keyframes startAnimation {
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
