--- a/src/components/CanvasAnimation.css
+++ b/src/components/CanvasAnimation.css
@@ -14,8 +14,7 @@
 .display-none {
   display: none;
 }
-/* PORTAL GUN ANIMATION */
-.portalGunAnimation,.meeseeksAnimation{
+.portalGunAnimation,.meeseeksAnimation , .partyAnimation{
   position: absolute;
   min-height: 150vh;
   width: 100%;
@@ -24,6 +23,7 @@
   opacity: 1;
   animation: startAnimation 0.3s linear;
 }
+/* PORTAL GUN ANIMATION */
 #portalGunCanvas{
   z-index: 1;
   background-color: black;
@@ -47,6 +47,7 @@
   animation: portalMovement 6s linear infinite;
 }
 
+/* MEESEEKS ANIMATION*/
 #meeseeksCanvas{
   display: block;
   position: absolute;
@@ -70,6 +71,60 @@
   display: none;
 }
 
+/* PARTY ANIMATION */
+#rick{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-55% , -50%);
+  z-index: 4;
+  animation: rickMovement 2s linear infinite;
+}
+.partyAnimation{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.lights-container{
+  min-height: 100vh;
+  width: 25%;
+  background-color: black;
+  filter: blur(60px);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+}
+.circle{
+  border-radius: 30rem;
+  max-width: 20rem;
+  height: 20rem;
+  opacity: .5;
+}
+.lightOne{
+  animation: lightOnOff 5s ease-in-out infinite;
+}
+.lightTwo{
+  animation: lightOnOff 4s 2s ease-in-out infinite;
+}
+.lightThree{
+  animation: lightOnOff 6s 3s ease-in-out infinite;
+}
+.lightFour{
+  animation: lightOnOff 2s 4s ease-in-out infinite;
+}
+.red{
+  background-color: red;
+}
+.green{
+  background-color:#00ff97;
+}
+.blue{
+  background-color:#00fcff;
+}
+
+
+/* CSS ANIMATIONS */
 @keyframes meeseeksMovement {
   0% {
     transform: translate(-50%, -50%) rotate(0deg);
@@ -126,5 +181,42 @@
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes lightOnOff {
+  0%{
+      opacity: .5;
+  }
+  20%{
+      opacity: .8;
+  }
+  40%{
+      opacity: .4;
+  }
+  60%{
+      opacity: 1;
+  }
+  80%{
+      opacity: .7;
+  }
+}
+@keyframes rickMovement{
+  0%{
+      opacity: .8;
+      transform: translate(-55%,-50%) rotate(0deg);
+  }
+  25%{
+      transform: translate(-55%,-50%) rotate(-5deg);
+  }
+  50%{
+      opacity: 1;
+      transform: translate(-55%,-50%) rotate(0deg);
+  }
+  75%{
+      transform: translate(-55%,-50%) rotate(5deg);
+  }
+  100%{
+      opacity: .8;
+      transform: translate(-55%,-50%) rotate(0deg);
   }
 }
