--- a/src/components/InstructionWindow.css
+++ b/src/components/InstructionWindow.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    height: 200vh;
+    height: 100vh;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
@@ -18,25 +18,28 @@
 }
 .img-container{
     position: relative;
-    height: 100vh;
-    width: 100%;
+    width: 941px;
+    height: 591px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .instructions{
-    position: relative;
-    top: 10rem;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,0);
+    transform: translate(-50%,-50%);
 }
 .close-btn{
     position: absolute;
-    top: 0;
-    right: 0;
+    right: 1.3rem;
+    top: 1rem;
     transform: scale(1.1);
-    margin: 3rem;
     cursor: pointer;
     transition: transform .4s;
 }
 .close-btn:hover{
-    transform: scale(1.4);
+    transform: scale(1.2);
+    filter: brightness(1.2);
     transition: transform .4s;
 }
